--- a/Lesson2/slides/tidy-data-slides.Rmd
+++ b/Lesson2/slides/tidy-data-slides.Rmd
@@ -11,6 +11,7 @@ library(knitr)
 opts_chunk$set(collapse = FALSE)
 library(dplyr)
 library(tidyr)
+library(fivethirtyeight)
 ```
 
 
@@ -93,8 +94,6 @@ iris %>%
 	group_by(Species, petal_measurments) %>% 
 	summarise(mean = mean(value))
 ```
-
-
 
 
 
