--- a/Lesson1/slides/introtoR_part2_slides.Rmd
+++ b/Lesson1/slides/introtoR_part2_slides.Rmd
@@ -5,11 +5,6 @@ date: "Oct 14, 2017"
 output: ioslides_presentation
 ---
 
-```{r, echo=F, include=F}
-library(tidyverse)
-library(readxl)
-```
-
 # Introduction to R: Data Manipulation
 Focusing on packages found in tidyverse
 
@@ -25,9 +20,13 @@ library(tidyverse)
 
 
 ## Learn to think in Code
-How to do you currently think about a task in excel or tableau?
+How to do you currently think about a task in excel or tableau? Learn how to translate and use that process in code.
 
-***
+1. What is your process for creating a pivot table?
+1. What is your process for creating a new column?
+1. How do you sort things?
+
+--
 
 
 ## SPLIT APPLY COMBINE
@@ -35,16 +34,24 @@ How to do you currently think about a task in excel or tableau?
 2.	Apply existing or custom functions to it, and
 3.	Combine the results in the same or different format.
 
+This will come back in a later lesson when we look at `PURR` and functional programing.
 
 ##  Five Most Important DPLYR Functions/Verbs
 1.	Filter
 2.	Select
 3.	Arrange
 4.	Mutate
-5.	Group by, Summarize
+5.	Group by, Summarize (Summarise)
 
-## There are so many things we didn't cover!
->- **Reshaping:** the data frame by making one column into 2. I.e serpate ELA and Math score columns instead of one column of score and one of subject.
->- **Plots:** GGPLOT is a part of tidyverse, and will allow you make simple plots very quickly.
->- **Regressions and Models:** R is first and foremost a statsical language. We'll cover linear and logistic regressions next time.
->- and much more... 
+
+## Filter
+Task: filter the IA data to only include 
+
+
+## Select
+
+## Arrange
+
+## Mutate
+
+## Group by
