--- a/index.Rmd
+++ b/index.Rmd
@@ -41,7 +41,7 @@ I'm helping my coworkers expand their use and knowledge of R. This is will be th
 - [R Markdown Reference Guide](https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf)
 
 ## Other
-- [Notes from a talk at Columbia by Hadley Wickham: Data Science in R](hadley_notes.nb.html){:target="_blank"}
+- [Notes from a talk at Columbia by Hadley Wickham: Data Science in R](hadley_notes.nb.html)
 
 ---
 ## Support or Questions
