--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,7 @@
 ---
 ---
 
-<link rel="stylesheet" href="styles.css" type="text/css">
-
-## Welcome to My R Tutorials Page.
+## Welcome to My R Tutorials Page
 I'm helping my coworkers expand their use and knowledge of R. This is will be the main resource for putting my materials until I find a different place.
 
 ## Lesson 1
