--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ I'm helping my coworkers expand their use and knowledge of R. This is will be th
 
 ### Workbooks
 - [Data Input and Output](Lesson1/io.html)
-- [Basic R](Lesson1/introtoR.nb.html)
+- [Basic R](Lesson1/introtoR.html)
 - [Transforming Data](Lesson1/introtoR_part2.nb.html)
 - [Subsetting](Lesson1/subsetting.html)
 
