--- a/index.Rmd
+++ b/index.Rmd
@@ -32,11 +32,12 @@ I'm helping my coworkers expand their use and knowledge of R. This is will be th
 ---
 
 ## Rstudio Cheatsheets
-<!-- - [Base R](http://github.com/rstudio/cheatsheets/raw/master/source/pdfs/base-r.pdf)
+- [Base R](https://www.rstudio.com/wp-content/uploads/2016/05/base-r.pdf)
 - [Rstudio IDE](https://www.rstudio.com/wp-content/uploads/2016/01/rstudio-IDE-cheatsheet.pdf)
-<!-- - [Data Import](https://github.com/rstudio/cheatsheets/raw/master/source/pdfs/data-import-cheatsheet.pdf){:target="_blank"} -->
+- [Data Import](https://github.com/rstudio/cheatsheets/raw/master/data-import.pdf)
 - [Data Wrangling](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf)
 - [R Markdown Reference Guide](https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf)
+- [Even more cheatsheets](https://www.rstudio.com/resources/cheatsheets/)
 
 ## Other
 - [Notes from a talk at Columbia by Hadley Wickham: Data Science in R](hadley_notes.nb.html)
