--- a/index.Rmd
+++ b/index.Rmd
@@ -6,10 +6,7 @@ I'm helping my coworkers expand their use and knowledge of R. This is will be th
 
 ## Lesson 1
 ### Slides
-- [Rstudio Basics](Lesson1/slides/intro_to_Rstudio_slides.html)
-- [Basics of R Coding](Lesson1/slides/introtoR_basics_slides.html)
-- [The Pipe](Lesson1/slides/introtoR_pipe_slides.html)
-- [Transforming Data](Lesson1/slides/introtoR_part2_slides.html)
+Slides are being revamped and will be avilable soon.
 
 ### Workbooks
 - [Data Input and Output](Lesson1/io.html)
